--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -64,33 +64,34 @@ const SMOKETEST_BUILD_VARIANTS = [
   {
     name: 'smoketest-ubuntu',
     display_name: 'Smoketest Ubuntu',
-    run_on: 'ubuntu1804-large',
+    run_on: 'ubuntu2004-large',
     depends_on: 'package-ubuntu',
   },
-  {
-    name: 'smoketest-windows',
-    display_name: 'Smoketest Windows',
-    run_on: 'windows-vsCurrent-large',
-    depends_on: 'package-windows',
-  },
-  {
-    name: 'smoketest-rhel',
-    display_name: 'Smoketest RHEL',
-    run_on: 'rhel80-large',
-    depends_on: 'package-rhel',
-  },
-  {
-    name: 'smoketest-macos-x64',
-    display_name: 'Smoketest MacOS Intel',
-    run_on: 'macos-14',
-    depends_on: 'package-macos-x64',
-  },
-  {
-    name: 'smoketest-macos-arm',
-    display_name: 'Smoketest MacOS Arm64',
-    run_on: 'macos-14-arm64',
-    depends_on: 'package-macos-arm',
-  }
+  
+//  {
+//    name: 'smoketest-windows',
+//    display_name: 'Smoketest Windows',
+//    run_on: 'windows-vsCurrent-large',
+//    depends_on: 'package-windows',
+//  },
+//  {
+//    name: 'smoketest-rhel',
+//    display_name: 'Smoketest RHEL',
+//    run_on: 'rhel80-large',
+//    depends_on: 'package-rhel',
+//  },
+//  {
+//    name: 'smoketest-macos-x64',
+//    display_name: 'Smoketest MacOS Intel',
+//    run_on: 'macos-14',
+//    depends_on: 'package-macos-x64',
+//  },
+//  {
+//    name: 'smoketest-macos-arm',
+//    display_name: 'Smoketest MacOS Arm64',
+//    run_on: 'macos-14-arm64',
+//    depends_on: 'package-macos-arm',
+//  }
 ];
 
 const TEST_PACKAGED_APP_BUILD_VARIANTS = [
@@ -214,7 +215,7 @@ buildvariants:
 <% } %>
 
 <% for (const buildVariant of SMOKETEST_BUILD_VARIANTS) { %>
-<% for (const distribution of COMPASS_DISTRIBUTIONS) { %>
+<% for (const distribution of ['compass']) { %>
   - name: <%= buildVariant.name %>-<%= distribution %>
     display_name: <%= buildVariant.display_name %> (<%= distribution %>)
     run_on: <%= buildVariant.run_on %>
@@ -470,7 +471,9 @@ tasks:
       - func: save-all-artifacts
         vars:
           compass_distribution: <%= distribution %>
+  <% } %>
 
+<% for (const distribution of ['compass']) { %>
   - name: smoketest-<%= distribution %>
     tags: ['required-for-publish', 'run-on-pr']
     commands:
