--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -84,6 +84,22 @@ buildvariants:
         variant: package-ubuntu
     tasks:
       - name: smoketest-compass
+  - name: smoketest-macos-x64-compass
+    display_name: Smoketest MacOS Intel (compass)
+    run_on: macos-14-gui
+    depends_on:
+      - name: package-compass
+        variant: package-macos-x64
+    tasks:
+      - name: smoketest-compass
+  - name: smoketest-macos-arm-compass
+    display_name: Smoketest MacOS Arm64 (compass)
+    run_on: macos-14-arm64-gui
+    depends_on:
+      - name: package-compass
+        variant: package-macos-arm
+    tasks:
+      - name: smoketest-compass
   - name: test-eol-servers
     display_name: Test EoL Servers
     run_on: ubuntu1804-large
