--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -480,8 +480,7 @@ tasks:
       - func: prepare
       - func: install
       - func: bootstrap
-        vars:
-          scope: 'compass-e2e-tests'
+      - func: spawn-signing-server
       - func: smoketest-packaged-app
         vars:
           mongodb_version: latest-enterprise
