--- a/packages/compass-connections/package.json
+++ b/packages/compass-connections/package.json
@@ -62,6 +62,7 @@
     "compass-preferences-model": "^2.31.2",
     "hadron-app-registry": "^9.2.9",
     "lodash": "^4.17.21",
+    "mongodb": "^6.12.0",
     "mongodb-build-info": "^1.7.2",
     "mongodb-connection-string-url": "^3.0.1",
     "mongodb-data-service": "^22.23.10",
