--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -669,12 +669,29 @@ functions:
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
 
+          #if [[ "$IS_WINDOWS" == "true" ]]; then
+            # TODO: windows_setup
+            # TODO: windows_msi
+            # TODO: windows_zip
+          #fi
+
           if [[ "$IS_OSX" == "true" ]]; then
             echo "Disabling clipboard usage in e2e tests (TODO: https://jira.mongodb.org/browse/BUILD-14780)"
             export COMPASS_E2E_DISABLE_CLIPBOARD_USAGE="true"
+            npm run --unsafe-perm --workspace compass-e2e-tests smoketest -- --package=osx_dmg
+            # TODO: osx_zip
           fi
 
-          npm run --unsafe-perm --workspace compass-e2e-tests smoketest
+          #if [[ "$IS_UBUNTU" == "true" ]]; then
+            # TODO: linux_deb
+            # TODO: linux_tar
+          #fi
+
+          #if [[ "$IS_RHEL" == "true" ]]; then
+            # TODO: linux_rpm
+            # TODO: rhel_tar
+          #fi
+
 
   test-web-sandbox:
     - command: shell.exec
