--- a/packages/compass-e2e-tests/.gitignore
+++ b/packages/compass-e2e-tests/.gitignore
@@ -3,3 +3,8 @@
 fixtures/*.csv
 fixtures/*.json
 hadron-build-info.json
+
+# Ignoring sandboxes (created per test run)
+.smoke-sandboxes/
+# Cache of downloaded binaries
+.smoke-downloads/
