--- a/packages/compass-e2e-tests/.prettierignore
+++ b/packages/compass-e2e-tests/.prettierignore
@@ -4,3 +4,8 @@ fixtures
 .nyc_output
 coverage
 hadron-build-info.json
+
+# Ignoring sandboxes (created per test run)
+.smoke-sandboxes/
+# Cache of downloaded binaries
+.smoke-downloads/
