--- a/.github/workflows/update-eslint.yaml
+++ b/.github/workflows/update-eslint.yaml
@@ -1,4 +1,4 @@
-name: Update electron
+name: Update ESLint
 
 # Runs nightly and manually
 on:
@@ -45,7 +45,7 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
           commit-message: 'chore(deps): update eslint'
-          branch: ci/update-electron
+          branch: ci/update-eslint
           title: 'chore(deps): update eslint'
           labels: no-title-validation
           author: '${{ steps.app-token.outputs.app-slug}}[bot] <${{ steps.app-token.outputs.app-email }}>'
