--- a/packages/compass-preferences-model/package.json
+++ b/packages/compass-preferences-model/package.json
@@ -59,8 +59,7 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "yargs-parser": "^21.1.1",
-    "zod": "^3.22.3"
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
