--- a/packages/compass-data-modeling/package.json
+++ b/packages/compass-data-modeling/package.json
@@ -62,6 +62,7 @@
     "@mongodb-js/compass-telemetry": "^1.7.1",
     "@mongodb-js/compass-user-data": "^0.6.0",
     "@mongodb-js/compass-workspaces": "^0.38.0",
+    "@mongodb-js/diagramming": "^0.3.0-alpha.5",
     "bson": "^6.10.3",
     "compass-preferences-model": "^2.39.0",
     "hadron-app-registry": "^9.4.10",
