--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -280,6 +280,11 @@ buildvariants:
       - name: test-web-sandbox-firefox-1
       - name: test-web-sandbox-firefox-2
       - name: test-web-sandbox-firefox-3
+  - name: test-can-bundle-compass-web
+    display_name: Test Can Bundle Compass Web
+    run_on: ubuntu2004-large
+    tasks:
+      - name: test-can-bundle-compass-web
   - name: test-web-sandbox-atlas-cloud
     display_name: Test Web Sandbox (w/ Atlas Cloud login)
     run_on: ubuntu2004-large
@@ -1552,6 +1557,18 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 3
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+  - name: test-can-bundle-compass-web
+    tags:
+      - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
+    commands:
+      - func: prepare
+      - func: install
+      - func: bootstrap
+      - func: compile-compass-web
+        vars:
+          debug: compass*,electron*,hadron*,mongo*
   - name: test-web-sandbox-atlas-cloud
     tags:
       - required-for-publish
